--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,20 +2,22 @@ monitor=,preferred,auto,auto
 
 # Execute your favorite apps at launch
 exec-once = waybar & hyprpaper
-exec-once = ~/.config/hypr/suspend.sh
+exec-once = xwaylandvideobridge
+exec-once = ~/.config/hypr/scripts/sleep.sh
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
-$terminal = alacritty 
-$fileManager = nemo
+$terminal = kitty  
+$fileManager = nemo 
 $menu = rofi -show drun
 $browser = brave
-$w1 = hyprctl hyprpaper wallpaper "DP-1,~/Pictures/wallpapers/0011.jpg"
-$w2 = hyprctl hyprpaper wallpaper "DP-1,~/Pictures/wallpapers/0065.jpg"
-$w3 = hyprctl hyprpaper wallpaper "DP-1,~/Pictures/wallpapers/0107.jpg"
-$w4 = hyprctl hyprpaper wallpaper "DP-1,~/Pictures/wallpapers/0112.jpg"
+#$w1 = hyprctl hyprpaper wallpaper "DP-1,~/Pictures/wallpapers/0011.jpg"
+#$w2 = hyprctl hyprpaper wallpaper "DP-1,~/Pictures/wallpapers/0065.jpg"
+#$w3 = hyprctl hyprpaper wallpaper "DP-1,~/Pictures/wallpapers/0107.jpg"
+#$w4 = hyprctl hyprpaper wallpaper "DP-1,~/Pictures/wallpapers/0112.jpg"
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -28,7 +30,7 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 0, float_switch_override_focus = 0, focus_on_active = true
+    follow_mouse = 1 
 
     touchpad {
         natural_scroll = no
@@ -102,7 +104,9 @@ gestures {
 }
 
 misc {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+		enable_swallow = true
+		swallow_regex = ^(Alacritty|kitty)$
+
 		disable_hyprland_logo = true
 		force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
 }
@@ -118,57 +122,81 @@ device:epic-mouse-v1 {
 # windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+
+# XWaylandVideoBridge
+windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+
+
 windowrulev2 = stayfocused, title:^(5618438a5670)$, class:^(steam)$
 windowrule = workspace 1, Brave
 windowrule = workspace 2, kitty
 windowrule = workspace 2, Alacritty
 windowrule = workspace 3, discord
 windowrule = workspace 8, steam
-
-
+windowrule = workspace 10, Minecraft* 
+windowrule = workspace 7, org.prismlauncher.PrismLauncher
 
 # MODKEYS
 $mainMod = SUPER
 $altMod = ALT
 $ctrlMod = CTRL
+
 # KEYBINDS
+# MEDIA KEYS
+bind = , xf86audioraisevolume, exec, wpctl set-sink-volume @DEFAULT_SINK@ +5%
+bind = , xf86audiolowervolume, exec, wpctl set-sink-volume @DEFAULT_SINK@ -5%
+
 # SUPER
-bind = $mainMod, M, fakefullscreen,
-bind = $mainMod, F, fullscreen,
+# bind = $mainMod, L, exec, swaylock -f -c 000000
 bind = $mainMod, W, exec, $browser
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive, 
 bind = $mainMod Shift, Q, exit, 
 bind = $mainMod Shift, Return, exec, $fileManager
+
+# LAYOUTS
+bind = $mainMod, F, fullscreen,
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+#bind = $mainMod, S, togglesplit, # dwindle
 
 # ALT
 bind = $altMod, D, exec, discord
 bind = $altMod, S, exec, steam
-
-
+bind = $altMod, M, exec, prismlauncher
 # CRTL
 bind = $ctrlMod $altMod, del, exec, systemctl logout,
 bind = $ctrlMod, P, exec, pavucontrol,
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
+
+# Move Window Location
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 1, exec, $w1
+#bind = $mainMod, 1, exec, $w1
+
 bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 2, exec, $w2
+#bind = $mainMod, 2, exec, $w2
+
 bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 3, exec, $w3
+#bind = $mainMod, 3, exec, $w3
+
 bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 4, exec, $w4
+#bind = $mainMod, 4, exec, $w4
+
 bind = $mainMod, 5, workspace, 5
 bind = $mainMod, 6, workspace, 6
 bind = $mainMod, 7, workspace, 7
@@ -178,9 +206,17 @@ bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
+#bind = $mainMod SHIFT, 1, exec, $w1
+
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
+#bind = $mainMod SHIFT, 2, exec, $w2
+
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
+#bind = $mainMod SHIFT, 3, exec, $w3
+
 bind = $mainMod SHIFT, 4, movetoworkspace, 4
+#bind = $mainMod SHIFT, 4, exec, $w4
+
 bind = $mainMod SHIFT, 5, movetoworkspace, 5
 bind = $mainMod SHIFT, 6, movetoworkspace, 6
 bind = $mainMod SHIFT, 7, movetoworkspace, 7
