--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,5 +1,7 @@
 preload = ~/Pictures/wallpapers/0011.jpg
 preload = ~/Pictures/wallpapers/0065.jpg
+preload = ~/Pictures/wallpapers/0073.jpg
 preload = ~/Pictures/wallpapers/0107.jpg
 preload = ~/Pictures/wallpapers/0112.jpg
 
+wallpaper = ,~/Pictures/wallpapers/0112.jpg
