Dracula themed waybar, hyprland, and powerline starship

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -118,9 +118,12 @@ device:epic-mouse-v1 {
 }
 
 # windowrule v1
-# windowrule = float, ^(kitty)$
+windowrule = float, ^(kitty)$
+windowrule = center, ^(kitty)$
+windowrule = size 900 600, ^(kitty)$
 # windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+#windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+#windowrulev2 = size 100 100,class:^(kitty)$
 # windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 
 # XWaylandVideoBridge
@@ -131,8 +134,11 @@ windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 
 
 windowrulev2 = stayfocused, title:^(5618438a5670)$, class:^(steam)$
+#windowrulev2 = size 125 32, floating:1, title:^(kitty)$, class:^(kitty)$
+
 windowrule = workspace 1, Brave
-windowrule = workspace 2, kitty
+#windowrule = workspace 2, kitty
+windowrule = workspace special:magic, kitty
 windowrule = workspace 2, Alacritty
 windowrule = workspace 3, discord
 windowrule = workspace 8, steam
@@ -156,6 +162,7 @@ bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive, 
 bind = $mainMod Shift, Q, exit, 
 bind = $mainMod Shift, Return, exec, $fileManager
+bind = $mainMod Shift, R, exec, ~/.config/waybar/launch.sh
 
 # LAYOUTS
 bind = $mainMod, F, fullscreen,
