--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,7 +2,7 @@ monitor=,preferred,auto,auto
 
 # Execute your favorite apps at launch
 exec-once = waybar & hyprpaper
-exec-once = xwaylandvideobridge
+#exec-once = xwaylandvideobridge
 exec-once = ~/.config/hypr/scripts/sleep.sh
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
@@ -157,6 +157,7 @@ bind = , xf86audiolowervolume, exec, wpctl set-sink-volume @DEFAULT_SINK@ -5%
 
 # SUPER
 # bind = $mainMod, L, exec, swaylock -f -c 000000
+bind = $mainMod, N , exec, $terminal newsboat
 bind = $mainMod, W, exec, $browser
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive, 
